--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,19 @@ name = "tea_subscription_rs"
 version = "0.1.0"
 edition = "2024"
 
+[workspace]
+members = [".", "migration"]
+
 [dependencies]
 rocket = { version = "0.5.1", features = ["json"] }
-sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock", "debug-print"] }
+sea-orm = { version = "1.1.11", features = [
+  "sqlx-postgres",
+  "runtime-tokio-native-tls",
+  "macros",
+  "mock",
+  "debug-print",
+] }
+migration = { path = "migration" }
 
 [lints.clippy]
 pedantic = "warn"
