--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ dotenvy = "0.15.7"
 migration = { path = "migration" }
 entity = { path = "entity" }
 service = { path = "service" }
+serde = { version = "1.0.219", features = ["derive"] }
 
 [lints.clippy]
 pedantic = "warn"
